tests/compile/shader_modules/compute_combinator.expected
#ifdef __clang__
In file included from compute_combinator.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:8:
combinators.hpp:175:17: error: static assertion failed due to requirement 'is_compute': compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
compute_combinator.cpp:24:4: note: in instantiation of function template specialization 'rcgp::ComputeCombinator::operator()<rcgp::shader_stage<rcgp::ShaderStage::eVertex, void, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>>' requested here
   24 |         } (vs);
      |           ^
In file included from compute_combinator.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:8:
combinators.hpp:175:17: error: static assertion failed due to requirement 'is_compute': compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
compute_combinator.cpp:35:4: note: in instantiation of function template specialization 'rcgp::ComputeCombinator::operator()<rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3>>>' requested here
   35 |         } (fs);
      |           ^
2 errors generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
In file included from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/compute_combinator.cpp:1:
include/meta/combinators.hpp: In instantiation of 'auto rcgp::ComputeCombinator::operator()(ComputeShader&) const [with ComputeShader = rcgp::shader_stage<rcgp::ShaderStage::eVertex, void, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4> > >]':
tests/compile/shader_modules/compute_combinator.cpp:24:4:   required from here
   21 |         auto pipeline = ComputeCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~
   22 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   23 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   24 |         } (vs);
      |         ~~^~~~
include/meta/combinators.hpp:175:31: error: static assertion failed: compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
  • 'is_compute' evaluates to false
include/meta/combinators.hpp: In instantiation of 'auto rcgp::ComputeCombinator::operator()(ComputeShader&) const [with ComputeShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3> >]':
tests/compile/shader_modules/compute_combinator.cpp:35:4:   required from here
   32 |         auto pipeline = ComputeCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~
   33 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   34 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   35 |         } (fs);
      |         ~~^~~~
include/meta/combinators.hpp:175:31: error: static assertion failed: compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
  • 'is_compute' evaluates to false
#elif __GNUC__ == 15
In file included from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/compute_combinator.cpp:1:
include/meta/combinators.hpp: In instantiation of 'auto rcgp::ComputeCombinator::operator()(ComputeShader&) const [with ComputeShader = rcgp::shader_stage<rcgp::ShaderStage::eVertex, void, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4> > >]':
tests/compile/shader_modules/compute_combinator.cpp:24:4:   required from here
   21 |         auto pipeline = ComputeCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~
   22 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   23 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   24 |         } (vs);
      |         ~~^~~~
include/meta/combinators.hpp:175:31: error: static assertion failed: compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
include/meta/combinators.hpp:175:31: note: 'is_compute' evaluates to false
include/meta/combinators.hpp: In instantiation of 'auto rcgp::ComputeCombinator::operator()(ComputeShader&) const [with ComputeShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3> >]':
tests/compile/shader_modules/compute_combinator.cpp:35:4:   required from here
   32 |         auto pipeline = ComputeCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~
   33 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   34 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   35 |         } (fs);
      |         ~~^~~~
include/meta/combinators.hpp:175:31: error: static assertion failed: compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
include/meta/combinators.hpp:175:31: note: 'is_compute' evaluates to false
#endif
#endif
